--- a/src/components/Dots/Dots.scss
+++ b/src/components/Dots/Dots.scss
@@ -1,7 +1,14 @@
 .dots{
     display: flex;
-    gap: 11px;
+    gap: 15px;
     position: relative;
     left: 110px;
     bottom: 230px;
+}
+
+ @media(max-width: 500px) {
+     .dots {
+         left: 25px;
+         bottom: 114px;
+     }
 }
