--- a/src/components/Cards/HeaderCard/HeaderCard.scss
+++ b/src/components/Cards/HeaderCard/HeaderCard.scss
@@ -31,9 +31,10 @@
     }
 
     .main-photo {
-        width: 705px;
+        width: 100%;
         height: 900px;
-        flex-shrink: 0;
+        object-fit: cover;
+        border-radius: 0 0 0 20px;
     }
 
     .ava-right {
