--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,20 +1,14 @@
 @import "@src/variables";
 
-.footer-delimiter {
-    width: 100%;
-}
-
 .footer-container {
-    max-width: 1140px;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
+    border-top: 2px solid $color-grey;
 }
 
 .footer {
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1140px;
+    margin: 0 auto;
     padding-bottom: 56px;
     align-items: center;
 
@@ -27,7 +21,6 @@
 
     .right {
         margin-top: 191px;
-        margin-left: 232px;
         display: inline-flex;
         flex-direction: column;
         z-index: 2;
