--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -3,20 +3,12 @@
 
 #home-page-container {
     display: flex;
-    height: 900px;
-    max-width: 1140px;
+    margin: 0 0 0 5%;
     gap: 100px;
-
-    .container {
-        display: grid;
-        grid-template-columns: 45% 65%;
-        margin-top: 150px;
-        align-self: center;
-        width: 100%;
-        gap: 60px;
-    }
+    height: auto;
 
     .home-page-header {
+        width: 40%;
 
         .left {
             display: flex;
@@ -77,7 +69,6 @@
             border-radius: 10px;
             border: 0;
             background: $color-purple;
-            text-align: center;
             cursor: pointer;
 
             .text-b {
