--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,8 +3,7 @@
 #header {
     position: relative;
     z-index: 1;
-    max-width: 1140px;
-    margin: 37px auto;
+    margin: 37px 50px;
 
     .header-container {
         display: flex;
