--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -41,6 +41,7 @@
             width: 100%;
             padding: 12px 8px;
             align-items: center;
+            text-align: center;
             gap: 16px;
             border-radius: 10px;
             border: 0;
