fix after merge

--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -3,7 +3,8 @@
 
 #home-page-container {
     display: flex;
-    margin: 0 0 0 7%;
+    margin: 0 auto;
+    max-width: 1440px;
     gap: 100px;
     height: auto;
 
