--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,17 +1,15 @@
 @import "@src/variables";
 
+
 #header {
     padding: 37px 50px 37px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 2000px;
+    margin: 0 auto;
     position: relative;
-
-    .header-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+    z-index: 1;
 
     .background {
         background-color: transparent;
@@ -54,7 +52,7 @@
 
     @media(max-width: 500px) {
         padding: 31px 10px 31px 24px;
-        
+
         .desktop-only {
             visibility: hidden;
         }
@@ -64,51 +62,56 @@
         }
 
         .column {
-                display: flex;
-                flex-direction: column-reverse;
-                position: absolute;
-                align-items: flex-end;
-                top: 100px;
-                gap: 15px;
-                right: 410px;
-                width: 100%;
-                background-color: white;
-                transform: translateX(0);
-                transition: all 0.4s ease;
-                padding: 0 50px 0 0;
-                
+            display: flex;
+            flex-direction: column-reverse;
+            position: absolute;
+            align-items: flex-end;
+            top: 100px;
+            gap: 15px;
+            right: 410px;
+            width: 100%;
+            background-color: white;
+            transform: translateX(0);
+            transition: all 0.4s ease;
+            padding: 0 50px 0 0;
+
         }
-        .column.active{
+
+        .column.active {
             transform: translateX(100%);
             background-color: white;
         }
-        
-        .mobile-only{
-                left: -90px;
-                    
+
+        .mobile-only {
+            left: -90px;
+
         }
-        .elipse-black{
+
+        .elipse-black {
             background-color: black;
             width: 36px;
-            height: 36px;   
+            height: 36px;
             flex-shrink: 0;
             border-radius: 50%;
         }
-        .ellipse{
+
+        .ellipse {
             width: 36px;
             height: 36px;
         }
-        .burger{
+
+        .burger {
             position: relative;
             right: 28px;
             bottom: 8px;
         }
 
-        .backet{
+        .backet {
             width: 20px;
             height: 20px;
         }
-        .menu{
+
+        .menu {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -127,7 +130,6 @@
         border: 1px solid $color-black;
         border-radius: 50%;
     }
-    
+
 
 }
-
