fix mobile  modal window

--- a/src/components/Modals/ModalWindow/ModalWindow.scss
+++ b/src/components/Modals/ModalWindow/ModalWindow.scss
@@ -11,3 +11,17 @@
     background-color: $color-white;
     z-index: 5;
 }
+
+
+@media (max-width: 500px) {
+
+    .modal-container {
+            position: relative;
+            top: 100px;
+            right: -10px;
+            width: 400px;
+            
+        }
+
+
+}
