--- a/src/components/Cards/HeaderCard/HeaderCard.scss
+++ b/src/components/Cards/HeaderCard/HeaderCard.scss
@@ -132,8 +132,9 @@
         }
 
         .arrow-switch {
-            left: 250px;
-            bottom: 145px;
+            left: 220px;
+            bottom: 25px;
+            right: 0;
         }
 
     }
