--- a/src/components/Footer/components/SocialNetwork/SocialNetwork.scss
+++ b/src/components/Footer/components/SocialNetwork/SocialNetwork.scss
@@ -17,7 +17,7 @@
         justify-content: space-between;
         margin-bottom: 40px;
 
-        &.icon {
+        .icon {
             width: 24px;
             height: 24px;
         }
