--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -46,8 +46,8 @@
         }
 
         span {
-            text-align: center;
             margin-bottom: 32px;
+            font-size: 16px;
         }
 
         .video-block {
