--- a/src/components/Cards/CardMiddle/CardMiddle.scss
+++ b/src/components/Cards/CardMiddle/CardMiddle.scss
@@ -65,22 +65,11 @@ a {
 }
 
 .top-section {
-    position: relative;
-}
-
-.time-badge {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    background-color: $color-white;
-    color: $color-black;
-    padding: 6px 8px;
-    border-radius: 10px;
-    font-size: 12px;
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    text-align: center;
+    img {
+        height: 360px;
+        max-width: 370px;
+        border-radius: 10px 10px 0 0;
+    }
 }
 
 .small-avatar {
