--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@import '@src/variables';
 
 .not-found {
     margin: 200px auto;
@@ -9,10 +9,10 @@
 
     p {
         color: $color-grey-3;
+        margin-bottom: 40px;
     }
 
     .homepage-btn {
-        margin-top: 40px;
         padding: 16px 49px;
     }
 }
