--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -3,8 +3,7 @@
 
 #home-page-container {
     display: flex;
-    margin: 0 auto;
-    max-width: 1440px;
+    margin: 0 0 0 7%;
     gap: 100px;
     height: auto;
 
