--- a/src/components/Footer/components/SocialNetwork/SocialNetwork.scss
+++ b/src/components/Footer/components/SocialNetwork/SocialNetwork.scss
@@ -16,6 +16,7 @@
         margin-top: 0;
         justify-content: space-between;
         margin-bottom: 40px;
+        gap: 0;
 
         .icon {
             width: 24px;
