--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -126,9 +126,8 @@
 @media (max-width: 850px) {
     .profile-section {
         flex-direction: column;
-        margin-right: 24px;
-        margin-left: 24px;
-        margin-bottom: 48px;
+        max-width: 366px;
+        margin: 0 auto 48px auto;
     }
 
     .header-img {
