--- a/src/pages/Checkout/components/CheckoutFragment/CheckoutFragment.scss
+++ b/src/pages/Checkout/components/CheckoutFragment/CheckoutFragment.scss
@@ -4,3 +4,9 @@
     gap: 32px;
     margin: 0 25%;
 }
+
+@media (max-width: 850px) {
+    .checkout-accordions-container {
+        margin: 0;
+    }
+}
