--- a/src/pages/Collections/components/CardsFragment/CardsFragment.scss
+++ b/src/pages/Collections/components/CardsFragment/CardsFragment.scss
@@ -3,3 +3,11 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
 }
+
+@media (max-width: 850px) {
+    .big-cards-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 16px;
+        margin-bottom: 100px;
+    }
+}
