--- a/src/pages/Marketplace/CardsFragment/CardsFragment.scss
+++ b/src/pages/Marketplace/CardsFragment/CardsFragment.scss
@@ -3,3 +3,10 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
+
+@media (max-width: 850px) {
+    .middle-cards-container {
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 100px;
+    }
+}
