--- a/src/pages/Marketplace/Marketplace.scss
+++ b/src/pages/Marketplace/Marketplace.scss
@@ -3,6 +3,12 @@
     margin: 0 auto;
 }
 
-.cards-container{
+.cards-container {
     display: flex;
+}
+
+@media (max-width: 850px) {
+    .market-place-section {
+        max-width: 366px;
+    }
 }
