--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -1,17 +1,16 @@
 @import "@src/variables";
 
 #sign-up-section {
-    
     display: flex;
-    padding: 40px;
     max-width: 1140px;
-    margin: 40px auto 0 auto;
-    gap: 112px; 
-    justify-content: space-around;
+    margin: 40px auto 120px auto;
+    gap: 112px;
+    justify-content: space-between;
 
     .left-block {
-            width: 450px;            
-        }
+        margin-top: 58px;
+        width: 50%;
+    }
 
     .text {
         margin-bottom: 8px;
@@ -20,8 +19,6 @@
         font-weight: 500;
         line-height: 48px;
     }
-
-
 
     .button-fill {
         margin-top: 42px;
@@ -43,22 +40,43 @@
     }
 
 
-    .foto-right{
-        position: relative;
-        top: 40px;
+    .photo {
+        margin-top: 58px;
+
+        img {
+            max-width: 457px;
+        }
     }
-
-
 
     .login-container {
         display: flex;
         flex-direction: column;
         gap: 32px;
-        margin-bottom: 16px;
+        margin-bottom: 24px;
         margin-top: 40px;
     }
-
-             
-   
 }
 
+@media (max-width: 850px) {
+    #sign-up-section {
+        margin: 0 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 0;
+
+        .left-block {
+            margin-top: 0;
+            margin-bottom: 40px;
+            width: 100%;
+        }
+
+        .photo {
+            margin-top: 0;
+
+            img {
+                max-width: 100%;
+            }
+        }
+    }
+}
