--- a/src/components/Footer/components/SocialNetwork/SocialNetwork.scss
+++ b/src/components/Footer/components/SocialNetwork/SocialNetwork.scss
@@ -16,7 +16,7 @@
         margin-top: 0;
         justify-content: center;
         margin-bottom: 40px;
-        gap: 0;
+        gap: 32px;
 
         .icon {
             width: 24px;
