--- a/src/pages/Home/components/CreateNftText/CreateNftText.scss
+++ b/src/pages/Home/components/CreateNftText/CreateNftText.scss
@@ -61,6 +61,7 @@
     #create-nft-container {
         .grid {
             grid-template-columns: 100%;
+            margin-top: 85px;
 
             .container {
                 flex-direction: column;
