--- a/src/pages/LogIn/LogIn.scss
+++ b/src/pages/LogIn/LogIn.scss
@@ -4,3 +4,13 @@
     margin: 40px auto 120px auto;
     justify-content: space-between;
 }
+
+@media (max-width: 850px) {
+    .login-section {
+        margin: 0 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 0;        
+    }
+}
