--- a/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
+++ b/src/pages/LogIn/components/EmailPassword/EmailPassword.scss
@@ -64,3 +64,16 @@
         margin-top: 40px;
     }
 }
+
+
+@media (max-width: 850px) {
+    .left-block {
+        margin-top: 10px;
+        margin-bottom: 40px;
+        width: 100%;
+    }
+
+    .photo {
+        margin-top: 20px;
+    }
+}
