--- a/src/pages/LogIn/components/ContinueWith/ContinueWith.scss
+++ b/src/pages/LogIn/components/ContinueWith/ContinueWith.scss
@@ -35,6 +35,7 @@
             gap: 10px;
             border-radius: 10px;
             border: 0;
+            background-color: $color-grey;
 
             .text-app-goog {
                 color: $color-black;
@@ -46,4 +47,26 @@
             }
         }
     }
+}
+
+@media (max-width: 850px) {
+    #google-apple{
+
+        .text-continue{
+            width: 100%;
+            text-align: center;            
+        }
+
+        .extra-auto-login {
+            display: block;
+            justify-content: space-between;
+            gap: 16px;
+            margin-top: 40px;            
+        }
+        .button-icon{
+            margin-bottom: 16px;
+        }
+    }
+    
+    
 }
