--- a/src/components/Cards/CardSmall/CardSmall.scss
+++ b/src/components/Cards/CardSmall/CardSmall.scss
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        width: 260px;
 
         .number {
             font-size: 20px;
