--- a/src/pages/Creators/CreatorProfile/CreatorProfile.scss
+++ b/src/pages/Creators/CreatorProfile/CreatorProfile.scss
@@ -5,6 +5,10 @@
         display: flex;
         align-items: center;
         gap: 252px;
+
+        .switch-box {
+            margin-bottom: 20px;
+        }
     }
 }
 
